메인 페이지 생성

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>boxiting</h1>
+    <h1>boxiting main</h1>
     <div>안녕, 나랑 대련할래?</div>
 </body>
 </html>
